fix offpage bleed

--- a/css/custom.css
+++ b/css/custom.css
@@ -49,11 +49,12 @@ section::after {
 }
 
 .footer p {
-	margin: 0px
+	padding-top: 5px;
+	margin: 0px;
 }
 
 .swiper-container {
-  height: calc(100vh - 100px); 
+  height: calc(100vh - 130px); 
 }
 
 .swiper-container .swiper-slide .image-wrap:hover:before {
